[package]
name = "file_dialog"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.72"
publish = false


[dependencies]
anyhow = "1.0.79"
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
rayon = "1.8.1"
rfd = "0.11"
egui = "0.25.0"
eframe = "0.25.0"
itertools = "0.12.1"
[profile.release]
lto = "fat"
strip = true
